namespace Swipe2Try.Core.Models
{
    public class Category
    {
        public int Id { get; set; }
        public required string Name { get; set; }
        public string? Photo { get; set; }
    }
}